--- a/styles/globals.css
+++ b/styles/globals.css
@@ -140,7 +140,7 @@
 }
 
 .datenschutz-first-text p a {
-  color: #F6E7C7;
+  color: #71B0DE;
 }
 
 
@@ -149,6 +149,6 @@
 }
 
 .new-orange-text {
-  color: #F6E7C7;
+  color: #71B0DE;
 
 }
