--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 .circle[data-active="true"] {
-  border: 1px solid #F6E7C7;
-  background-color: #F6E7C7;
+  border: 1px solid #71B0DE;
+  background-color: #71B0DE;
 }
 
 .circle[data-active="true"] .numero {
@@ -19,7 +19,7 @@
   content: "";
   position: absolute;
   height: 0.25rem;
-  background-color: #F6E7C7;
+  background-color: #71B0DE;
   bottom: -2px;
   left: 0;
   width: 6.5rem;
@@ -77,8 +77,8 @@ input[type="number"] {
 
 /* When the checkbox is checked, add a blue background */
 .container_check input:checked ~ .checkmark {
-  background-color: #F6E7C7;
-  border: #F6E7C7 1px solid;
+  background-color: #71B0DE;
+  border: #71B0DE 1px solid;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
@@ -194,7 +194,7 @@ input[type="number"] {
   top: 1px;
   width: 8px;
   height: 14px;
-  border: solid #F6E7C7;
+  border: solid #71B0DE;
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
@@ -213,7 +213,7 @@ input[type="number"] {
   height: 18px;
   left: 0;
   bottom: 0;
-  background-color: #F6E7C7;
+  background-color: #71B0DE;
 }
 
 @media (max-width: 567px) {
